# edaxsd2rs

./: Cargo.toml  LICENSE  README.md
edaxsd/: CMRequest_01p10.xsd  CMRevoke_01p00.xsd  CPCommonTypes_01p20.xsd  CPDevStatust_01p12.xsd  CPDocument_01p12.xsd  CPDocument_01p13.xsd  CPNotification_01p13.xsd  CPRequest_01p12.xsd  ConsumptionRecord_01p30.xsd  ConsumptionRecord_01p31.xsd  ECMPList_01p00.xsd  MasterData_01p31.xsd  Message_01p10.xsd  MeteringPointList_01p20.xsd  data.xml
src/: eda.rs  eda_convert.rs  eda_info.rs  eda_typ.rs  eda_write.rs  main.rs
src/edagen/: cmrequest_01p10.rs  cmrevoke_01p00.rs  consumptionrecord_01p30.rs  consumptionrecord_01p31.rs  cpcommontypes_01p20.rs  cpdevstatust_01p12.rs  cpdocument_01p12.rs  cpdocument_01p13.rs  cpnotification_01p13.rs  cprequest_01p12.rs  ecmplist_01p00.rs  masterdata_01p31.rs  message_01p10.rs  meteringpointlist_01p20.rs  mod.rs
test/Prozess/: ANFORDERUNG_ECP.xml
